  (bug #2895272 - report and patch from Bernhard Walle).
  doxygen now highlights quoted strings in comments.

- Ruby mode - keyword highlighting bug fix ( # 2868654 - Suraj Kurapati)

- Updated logtalk.xml file (# 2937909 - Paulo Moura)

- Slax Edit Mode ( # 2883030 - curtis_call )

- Json edit mode ( # 2979745 - Dale Anson )

- PHP Smarty Templates Mode ( # 2969956 - Rowan Collins)

- Haskell edit mode rewrite ( # 2993269 - Stephen Blackheath)

- Pure edit mode updates ( # 2988741 - asitdepends)

- url.xml mode (# 1991306 - Kevin Hunter)

- LaTeX mode - code indentation (2872638 - Michael Schlotter)

- 'dot.xml' mode file indent{Open,Close}Brackets wrong
  (#3008614 - Robin Neatherway)

- Added logtalk.xml mode file (#1945284 - Paulo Moura)

- Added regex.xml mode file (#2782258 - Kevin Hunter)

- Added sip.xml mode file to read sip messages (Matthieu Casanova)

- New paste special action accessible from menu
  Edit->More clipboard->Paste Special that will suggest different mode to paste
  data from clipboard, currently plain text, rich jEdit text
  (plain text + edit mode) and mime type html are supported (Matthieu Casanova)

- Added Ant mode file for Ant build files. (#3016053 - Dale Anson)

- Added TLD mode file for JSP Tag Definition Library files. (#3016054 - Dale Anson)

- Added Maven mode file for Maven pom.xml files. (#3016057 - Dale Anson)

- Updated javacc mode to better highlight keywords and regular expressions. (Dale Anson)

- Updated Django temlate mode to Django 1.2, added missing keywords
  and better integration with HTML, CSS and JS (Jakub Roztočil)

}}}
{{{ Miscellaneous

- Replaced the links to Java 5 documentation with links to Java 6 documentation
  (Björn "Vampire" Kautler)

- README.SRC.txt cleanup (Björn "Vampire" Kautler)

- Made the Windows installer correctly show special characters like german
  umlauts (Björn "Vampire" Kautler)

- Made the filter tasks use UTF-8 encoding as all our files are UTF-8 encoded
  (Björn "Vampire" Kautler)
